# PhantomPhreak

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
dialer/: __init__.py  __main__.py  cli.py
dialer/analysis/: __init__.py  answering_machine.py  cadence.py  classifier.py  dtmf.py  fft.py  ml_classifier.py  signatures.py  sit.py
dialer/core/: __init__.py  audio.py  iax2.py  iax2_provider.py  modem.py  modem_provider.py  provider.py  scanner.py
dialer/reports/: __init__.py  html_report.py
dialer/storage/: __init__.py  database.py  models.py
scripts/: detect_modem.py
